# factory-log-agent

./: .env.example  .gitignore  README.md  pyproject.toml
factory-log-data/: factory_equipment_log.csv
src/factory_agent/: __init__.py  agent.py  chat.py  client.py  data.py  server.py  tools.py
